--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -6,6 +6,7 @@ footer {
 	
     width: 100%;
 }
+/* Navbar CSS */
 .navbar-light{
 	background-color: #000140;
     border-color: #080808;
@@ -15,8 +16,31 @@ footer {
 .navbar-light > a, {
 	color: #2bb;
 }
-
+/* Footer CSS */
 .footer-color{
 	background-color: gray;
 	padding: 50px;
+}
+
+/* MODAL CSS */
+.modal {
+
+	position: fixed;
+	top: 30px;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.4);
+	text-align: center;
+}
+
+.modal > form {
+
+	display: inline-block;
+    background-color: #fff
+}
+
+#close {
+
+	position: absolute;
+	right: 31.7%;
 }
