--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -20,7 +20,7 @@ body {
     padding: 19px;
     margin-bottom: 20px;
     background-color: #151414;
-    border: 1px solid #e3e3e3;
+    border: 0px solid;
     border-radius: 4px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
@@ -44,10 +44,6 @@ a {
 a:hover {
     background-color: transparent;
     color: #ccc;
-}
-
-#facebook{
-	color:#fff;
 }
 
 /* Footer CSS */
