--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -3,7 +3,7 @@ body {
 }
 
 footer {
-	
+
     width: 100%;
 }
 /*Editing body CSS*/
@@ -22,19 +22,25 @@ body {
     background-color: #151414;
     border: 0px solid;
     border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    -webkit-box-shadow: 3px 3px 4px #000000;
+    box-shadow: 3px 3px 4px #000000;
 }
 /* Navbar CSS */
 .navbar-light{
 	background-color: #3c3939;
     border: 0px solid;
     color: #f0f0f0;
+    box-shadow: 0px 0.6px 10px #000000;
 }
 
 .navbar-light > a, {
 	color: #f0f0f0;
 }
+
+.theLogo {
+  font-family:  "Lucida Console", Courier, monospace;;
+}
+
 /* Fonts */
 a {
     color: #eaeaea;
@@ -90,6 +96,11 @@ button, input, select, textarea {
     display: inline-block;
     padding: 5px 14px;
     background-color: #00679a;
-    border: 1px solid #66cdff;
+    border: 0px solid #66cdff;
     border-radius: 15px;
+    box-shadow: 1px 2px 1px #00379a;
+}
+
+.lead2 {
+  font-size: 15px;
 }
