--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -1,4 +1,4 @@
-body {
+5body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
@@ -116,4 +116,8 @@ button, select {
 
 .lead2 {
   font-size: 15px;
+}
+
+textarea {
+    color: black;
 }
