--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -1,4 +1,4 @@
-5body {
+body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
