--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -147,3 +147,23 @@ textarea {
       border-radius: 50%;
       /*box-shadow: 1px 2px 1px #00379a;*/
 }
+
+.readMore:hover, .readMore:active {
+      position: relative;
+      top: 50%;
+      left: 50%;
+      margin-bottom: 15px;
+      align-content: center;
+      width: 45px;
+      height: 45px;
+      display: inline-block;
+      padding: 5px 14px;
+      background-color: #023f5d;
+      border: 0.5px solid #3b7794;
+      border-radius: 50%;
+      /*box-shadow: 1px 2px 1px #00379a;*/
+}
+.readMore:focus{
+   outline: 0px;
+    /* box-shadow: 1px 2px 1px #00379a; */
+}
