--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -91,7 +91,6 @@ a:hover {
 .inputs2 {
   background: #00679a;
   border: 0.5px solid #529ec3;
-  border-radius: 15px;
   box-shadow: 1px 2px 1px #00379a;
   color: white;
 }
@@ -106,7 +105,6 @@ button, select {
     box-shadow: none;
     background: #00679a;
     border: 0.5px solid #529ec3;
-    border-radius: 15px;
     box-shadow: 1px 2px 1px #00379a;
 }
 
@@ -115,8 +113,8 @@ button, select {
     padding: 5px 14px;
     background-color: #00679a;
     border: 0.5px solid #529ec3;
-    border-radius: 15px;
     box-shadow: 1px 2px 1px #00379a;
+    border-radius: 0px;
 }
 
 .lead2 {
@@ -159,7 +157,7 @@ textarea {
       display: inline-block;
       padding: 5px 14px;
       background-color: #023f5d;
-      border: 0.5px solid #3b7794;
+      border: 0.5px solid #3b7794;<
       border-radius: 50%;
       /*box-shadow: 1px 2px 1px #00379a;*/
 }
