--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -52,6 +52,10 @@ a:hover {
     color: #ccc;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Lucida Console", Courier, monospace;
+}
+
 /* Footer CSS */
 .footer-color{
 	background-color: #524b4b; /* #080808 */
@@ -62,7 +66,6 @@ a:hover {
 .modal {
 
 	position: fixed;
-	top: 30px;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0,0,0,0.4);
@@ -102,7 +105,7 @@ a:hover {
 button, select {
     font-size: inherit;
     line-height: inherit;
-    /*box-shadow: none;*/ 
+    /*box-shadow: none;*/
     background: #00679a;
     border: 0px solid #529ec3;
     /*box-shadow: 1px 2px 1px #00379a;*/
